Remove modelMapper and add custom mapping